fix marker bug on iphone

--- a/.theme/app/assets/components.css
+++ b/.theme/app/assets/components.css
@@ -74,7 +74,7 @@
     li {
       @apply max-w-[600px];
 
-      &::marker {
+      &::before {
         @apply content-['\__'] text-red-500 text-xl font-semibold;
       }
 
